# talk-to-us-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup.py
alembic/: env.py  test.py
alembic/versions/: 0c166afdae6c_update_tables.py  0c5e6decfd07_create_user_and_product_tables.py  3a21f3590039_create_tables.py  464ef4bfd206_remove_responses_id_in_tickets_table.py  4d459771d489_create_users_tickets_and_responses_table.py  a633fbdd9d79_update_product_table.py  f5f6db44d699_update_tables.py  ffee950cd865_add_responses_in_tickets_table.py
src/: app.py
src/controllers/: product.py  users.py
src/db/: connection.py  security.py  settings.py
src/infra/core/: connection.py  settings.py
src/models/: enums.py  product_model.py  user_model.py
src/repositories/: product_repository.py  user_repository.py
src/responses/: model.py
src/routes/: products.py  users.py
src/schemas/: product_schema.py  responses_messages.py  user_schema.py
src/services/: product_service.py  user_service.py
src/tests/: conftest.py  test_app.py  test_db.py  test_user.py
src/tickets/: enums.py  model.py
src/users/: controller.py  enums.py  model.py  routers.py  schema.py  service.py
src/utils/models/: timestamp_mixin.py
